[package]
name = "astar"
version = "0.1.0"
authors = ["Brendan Urquhart <dev@bauc.net>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.3.0", features = [ "vorbis" ] }
rand = "0.7.3"
